--- a/XafFromXpoToEf.Win/XafFromXpoToEf.Win.csproj
+++ b/XafFromXpoToEf.Win/XafFromXpoToEf.Win.csproj
@@ -27,19 +27,19 @@
     <EmbeddedResource Include="Images\Logo.svg" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.ExpressApp" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.CodeAnalysis" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.EFCore" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.FileAttachment.Win" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.PivotGrid.Win" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.ReportsV2.Win" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.Validation.Win" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.Win" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.ExpressApp.Win.Design" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.Persistent.Base" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.Persistent.BaseImpl.EFCore" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.RichEdit.Export" Version="23.1.2-beta" />
-    <PackageReference Include="DevExpress.Win.Design" Version="23.1.2-beta" />
+    <PackageReference Include="DevExpress.ExpressApp" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.CodeAnalysis" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.EFCore" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.FileAttachment.Win" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.PivotGrid.Win" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.ReportsV2.Win" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.Validation.Win" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.Win" Version="23.1.3" />
+    <PackageReference Include="DevExpress.ExpressApp.Win.Design" Version="23.1.3" />
+    <PackageReference Include="DevExpress.Persistent.Base" Version="23.1.3" />
+    <PackageReference Include="DevExpress.Persistent.BaseImpl.EFCore" Version="23.1.3" />
+    <PackageReference Include="DevExpress.RichEdit.Export" Version="23.1.3" />
+    <PackageReference Include="DevExpress.Win.Design" Version="23.1.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XafFromXpoToEf.Module\XafFromXpoToEf.Module.csproj" />
