--- a/XafFromXpoToEf.Module/XafFromXpoToEf.Module.csproj
+++ b/XafFromXpoToEf.Module/XafFromXpoToEf.Module.csproj
@@ -39,6 +39,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageReference Include="NPOI" Version="2.6.1" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Migrations\" />
