--- a/XafFromXpoToEf.Win/App.config
+++ b/XafFromXpoToEf.Win/App.config
@@ -27,7 +27,7 @@
   </appSettings>
   <connectionStrings>
     <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=true;Data Source=(localdb)\mssqllocaldb;Initial Catalog=XafFromXpoToEfEasyTest" providerName="System.Data.SqlClient"/>
-    <add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\mssqllocaldb;Initial Catalog=XafFromXpoToEf" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Integrated Security=SSPI;MultipleActiveResultSets=True;Data Source=(localdb)\mssqllocaldb;Initial Catalog=1XafFromXpoToEf" providerName="System.Data.SqlClient" />
     <!--
     Use the following connection string to connect to a Jet (Microsoft Access) database:
     <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Password=;User ID=Admin;Data Source=XafFromXpoToEf.mdb;Mode=Share Deny None;"/>
